<resources>
    <string name="app_name">PhoneGuardian</string>
    <string name="navigation_first">1.欢迎使用手机防盗</string>
    <string name="navigation_second">2.手机卡绑定</string>
    <string name="navigation_three">3.设置安全号码</string>
    <string name="navigation_four">4.恭喜您，设置完成</string>
    <string name="phone_guard">您的手机防盗卫士</string>
    <string name="protect_close">防盗保护已关闭</string>
    <string name="protect_yes_no">防盗保护是否开启</string>
    <string name="sim_change">sim卡变更报警</string>
    <string name="gps_go">GPS追踪</string>
    <string name="alarm">播放报警音乐:#*alarm*#</string>
    <string name="wipe_data">数据销毁:#*wipedata*#</string>
    <string name="long_lock_screen">远程锁屏:#*lockscreen*#</string>
    <string name="gps_location">GPS追踪:#*location*#</string>
    <string name="long_change">远程锁屏</string>
    <string name="destory_data">数据销毁</string>
    <string name="next_page">下一页</string>
    <string name="up_page">上一页</string>
    <string name="bind_sim">通过绑定sim卡:\n下次重启手机发现sim卡变化发送报警短信</string>
    <string name="send_safety">sim卡变更后:\n报警短信会发送给安全号码</string>
    <string name="chose_content">选择联系人</string>
    <string name="function_list">功能列表</string>
    <string name="function_intro">功能简介</string>
    <string name="setting_center">设置中心</string>
    <string name="versions_name">版本名称</string>
    <string name="confirm_psd">确认密码</string>
    <string name="setting_psd">设置密码</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="set_finish">设置完成</string>
    <string name="chose_contact">选中联系人</string>
    <string name="phone_bak">手机防盗</string>
    <string name="safety_number">安全号码</string>
    <string name="into_setting_again">重新进入设置向导</string>
    <string name="supper_tool">高级工具</string>
    <string name="address_query">归属地查询</string>
    <string name="copy_message">短信备份</string>
    <string name="query_often_use_number">常用号码查询</string>
    <string name="program_lock">程序锁</string>
    <string name="query">查询</string>
    <string name="change_position">按中提示框拖拽到任意位置</string>
    <string name="blacklist_add">添加</string>
    <string name="blacklist_add_number">添加黑名单号码</string>
    <string name="blacklist_manage">黑名单管理</string>
    <string name="blacklist_sms">短信</string>
    <string name="blacklist_phone">电话</string>
    <string name="blacklist_all">所有</string>
    <string name="sample_device_admin">超级管理员</string>
    <string name="app_manage">软件管理</string>
    <string name="app_uninstall">卸载</string>
    <string name="app_start">启动</string>
    <string name="app_shall">分享</string>
    <string name="progress_manage">进程管理</string>
    <string name="progress_manage_setting">进程设置</string>
    <string name="progress_all">全选</string>
    <string name="progress_re_all">反选</string>
    <string name="progress_clear">一键清理</string>
    <string name="progress_setting">设置</string>
    <string name="hidden_sys_progress">隐藏系统进程</string>
    <string name="screen_clear_close">锁屏清理已关闭</string>
    <string name="sample_device_admin_description">一键激活，一键锁屏，一键清除数据，一键卸载</string>
    <string name="often_use_number_query">常用号码查询</string>
    <string name="app_unlock">未加锁</string>
    <string name="app_lock">已加锁</string>
    <string name="ant_virus_title">手机杀毒</string>
    <string name="cache_clear">缓存清理</string>
    <string name="cache_clear_now">立即清理</string>
</resources>
