<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cac6c6"
    android:orientation="vertical">

    <TextView
        style="@style/TitleStyle"
        android:background="#e97474"
        android:text="@string/blacklist_add_number" />

    <EditText
        android:id="@+id/et_blacklist_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:hint="@string/blacklist_add_number"
        android:inputType="phone" />

    <RadioGroup
        android:id="@+id/rg_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:checked="true"
            android:text="@string/blacklist_sms"
            android:textColor="#000"
            android:textSize="23dp" />

        <RadioButton
            android:id="@+id/rb_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/blacklist_phone"
            android:textColor="#000"
            android:textSize="23dp" />

        <RadioButton
            android:id="@+id/rb_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/blacklist_all"
            android:textColor="#000"
            android:textSize="23dp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_blacklist_ok"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textColor="#000"
            android:textSize="20dp" />

        <Button
            android:id="@+id/but_blacklist_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#000"
            android:textSize="20dp" />
    </LinearLayout>
</LinearLayout>