<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ty.phoneguardian.Activity.ProgressSettingActivity">

    <TextView
        style="@style/TitleStyle"
        android:text="@string/progress_manage_setting" />

    <CheckBox
        android:id="@+id/hidden_sys_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/hidden_sys_progress"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/screen_clear_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/screen_clear_close"
        android:textSize="24sp" />
</LinearLayout>
