<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/local_popup_bg"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_app_uninstall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@mipmap/img1"
        android:text="@string/app_uninstall"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_app_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@mipmap/img2"
        android:text="@string/app_start"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_app_shall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@mipmap/img3"
        android:text="@string/app_shall"
        android:textSize="20sp" />
</LinearLayout>