<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ty.phoneguardian.Activity.ProgressManagerActivity">

    <TextView
        style="@style/TitleStyle"
        android:text="@string/progress_manage" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_progress_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_residue_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="23sp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <!--LiseView默认不占高度-->
        <ListView
            android:id="@+id/lv_progress_show"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>

        <TextView
            android:id="@+id/tv_progress_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aba3a3"
            android:padding="10dp"
            android:textColor="#fff"
            android:textSize="24sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/progress_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/progress_all"
            android:textSize="20sp" />

        <Button
            android:id="@+id/progress_re_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/progress_re_all"
            android:textSize="20sp" />

        <Button
            android:id="@+id/progress_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/progress_clear"
            android:textSize="20sp" />

        <Button
            android:id="@+id/progress_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/progress_setting"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
