<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SetNavigation.NavigationFirstActivity">

    <TextView
        style="@style/TitleStyle"
        android:text="@string/navigation_four" />

    <CheckBox
        android:id="@+id/cb_is_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protect_close"
        android:textSize="24sp" />
    <!--内部的点水平居中-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/disable_point" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/disable_point" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/disable_point" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/enable_point" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/phone" />

        <Button
            style="@style/nextBut"
            android:onClick="nextPage"
            android:text="@string/set_finish" />

        <Button
            style="@style/superiorBut"
            android:onClick="upPage" />
    </RelativeLayout>
</LinearLayout>
