<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SetNavigation.NavigationFirstActivity">

    <TextView
        style="@style/TitleStyle"
        android:text="@string/navigation_three" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/send_safety"
        android:textColor="#000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_sim_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/but_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_phone"
        android:text="@string/chose_content"
        android:textSize="20dp" />
    <!--内部的点水平居中-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/disable_point" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/disable_point" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/enable_point" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/disable_point" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/phone" />

        <Button
            style="@style/nextBut"
            android:onClick="nextPage" />

        <Button
            style="@style/superiorBut"
            android:onClick="upPage" />
    </RelativeLayout>
</LinearLayout>
